api-macros/tests/ui/missing_source.rs
#[derive(trillium_api::TryFromConn)]
struct NoAttr {
    name: String,
}

fn main() {}
